@@ -1,12 +1,19 @@
 {
-  "timestamp" : "2022-07-22T16:22:53Z",
+  "timestamp" : "2022-07-24T08:16:30Z",
   "count_outdated" : 109,
   "uniques_outdated" : 73,
-  "count" : 110,
-  "uniques" : 74,
+  "count" : 111,
+  "uniques" : 75,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
